# rust-md-block-extractor

./: Cargo.toml  README.md
docs/: lexer_explanation.md
src/: lib.rs
src/md/: md_types.rs  meta_extractor.rs  mod.rs
