[package]
name = "md-meta"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- Json & Toml
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["macros"] }
toml = "0.8.19"
value-ext = "0.1.1"


